Schalter/Drivers Totem/Setup_BK-C310(Normal)_EN V2.0/KIOSKDLL V1.17/KIOSKDLLDemo Souce/KIOSKDLLDEMO_VC/LoadDLL.h

typedef HANDLE ( __stdcall *KIOSK_OpenCom )( LPCTSTR lpName, 
											 int nComBaudrate,  
											 int nComDataBits,  
											 int nComStopBits, 
											 int nComParity, 
											 int nFlowControl );
typedef int ( __stdcall *KIOSK_SetComTimeOuts )( HANDLE hPort, 
												 int nWriteTimeoutMul,
												 int nWriteTimeoutCon,
												 int nReadTimeoutMul,
												 int nReadTimeoutCon);
typedef int ( __stdcall *  KIOSK_CloseCom )( HANDLE hPort );
typedef int ( __stdcall * KIOSK_OpenLptByDrv )( WORD LPTAddress );
 

typedef int ( __stdcall * KIOSK_CloseDrvLPT)( int nPortType );
typedef HANDLE ( __stdcall * KIOSK_OpenUsb )( void );
typedef HANDLE ( __stdcall * KIOSK_OpenUsbByID)( int nID );
typedef int ( __stdcall * KIOSK_CloseUsb)( HANDLE hPort );
typedef int ( __stdcall * KIOSK_SetUsbTimeOuts)( HANDLE hPort, WORD wReadTimeouts, WORD wWriteTimeouts);
typedef HANDLE( __stdcall * KIOSK_OpenDrv)( char * drivername );
typedef int ( __stdcall * KIOSK_CloseDrv )( HANDLE hPort );
typedef int ( __stdcall * KIOSK_StartDoc )( HANDLE hPort );
typedef int ( __stdcall * KIOSK_EndDoc ) ( HANDLE hPort );
typedef int ( __stdcall * KIOSK_WriteData )( HANDLE hPort, int nPortType, char * pszData, int nBytesToWrite);
typedef int ( __stdcall * KIOSK_ReadData ) ( HANDLE hPort, int nPortType, int nStatus, char * pszBuffer, int nBytesToRead );
typedef int ( __stdcall * KIOSK_SendFile )( HANDLE hPort, int nPortType, char * filename );
typedef int ( __stdcall * KIOSK_BeginSaveToFile)(HANDLE hPort, LPCTSTR lpFileName, BOOL bToPrinter );
typedef int ( __stdcall * KIOSK_EndSaveToFile)(HANDLE hPort);
typedef int ( __stdcall * KIOSK_QueryStatus )(  HANDLE hPort, int nPortType, char * pszStatus,int nTimeouts);
typedef int ( __stdcall * KIOSK_QueryASB)( HANDLE hPort, int nPortType, int Enalbe );
typedef int ( __stdcall * KIOSK_GetVersionInfo ) ( int *pnMajor,   int *pnMinor);
typedef int ( __stdcall * KIOSK_EnableMacro)( HANDLE hPort, int nPortType, int nEnable );
typedef int ( __stdcall * KIOSK_Reset)(HANDLE hPort, int nPortType);
typedef int ( __stdcall * KIOSK_SetPaperMode)(HANDLE hPort,int nPortType,int nMode);
typedef int ( __stdcall * KIOSK_SetMode)(HANDLE hPort,int nPortType,int nPrintMode );
typedef int ( __stdcall * KIOSK_SetMotionUnit)( HANDLE hPort,int nPortType,int nHorizontalMU,int nVerticalMU );
typedef int ( __stdcall * KIOSK_SetLineSpacing) ( HANDLE hPort,int nPortType,int nDistance);
typedef int ( __stdcall * KIOSK_SetRightSpacing)( HANDLE hPort,int nPortType,int nDistance) ;
typedef int ( __stdcall * KIOSK_SetOppositePosition)(HANDLE hPort,
													int nPortType,
													int nPrintMode,
													int nHorizontalDist,
													int nVerticalDist  );
typedef int ( __stdcall * KIOSK_SetTabs )( HANDLE hPort, int nPortType,	char * pszPosition, int nCount );
typedef int ( __stdcall * KIOSK_ExecuteTabs)( HANDLE hPort,  int nPortType );
typedef int ( __stdcall * KIOSK_PreDownloadBmpToRAM)( HANDLE hPort, int nPortType, char * pszPaths, int nTranslateMode,  int nID );
typedef int ( __stdcall * KIOSK_PreDownloadBmpToFlash )( HANDLE hPort,
														int nPortType,
														char * pszPaths[], 
														 int nTranslateMode,
														int nCount );
typedef int ( __stdcall * KIOSK_SetCharSetAndCodePage)(HANDLE hPort,int nPortType,	int nCharSet,int nCodePage);
typedef int ( __stdcall * KIOSK_FontUDChar)( HANDLE hPort,
											int nPortType,
											int nEnable,
											int DPI,
											int nChar,
											int nCharCode,
											char *pCharBmpBuffer,
											int nDotsOfWidth,
											int nBytesOfHeight );
typedef int ( __stdcall * KIOSK_FeedLine)(HANDLE hPort, int nPortType);
typedef int ( __stdcall * KIOSK_FeedLines)(HANDLE hPort,int nPortType,int nLines);
typedef int ( __stdcall * KIOSK_MarkerFeedPaper)( HANDLE hPort, int nPortType );
typedef int ( __stdcall * KIOSK_CutPaper)( HANDLE hPort, int nPortType, int nMode, int nDistance );
typedef int ( __stdcall * KIOSK_MarkerCutPaper)(HANDLE hPort, int nPortType, int nDistance );
typedef int ( __stdcall * KIOSK_S_SetLeftMarginAndAreaWidth)(HANDLE hPort,
															 int nPortType,
															 int nDistance,
															 int nWidth );
typedef int ( __stdcall * KIOSK_S_SetAlignMode)( HANDLE hPort, int nPortType, int nMode);
typedef int ( __stdcall * KIOSK_S_Textout)(	HANDLE hPort,
											int nPortType,
											char *pszData,     
											int nOrgx,           
											int nWidthTimes,     
											int nHeightTimes,    
											int nFontType,       
											int nFontStyle );
typedef int ( __stdcall * KIOSK_S_DownloadPrintBmp)(HANDLE hPort, 
													 int nPortType,
													 char *pszPath, 
													 int nTranslateMode, 
													 int nOrgx,        
													 int nMode);
typedef int ( __stdcall *KIOSK_S_PrintBmpInRAM)( HANDLE hPort, 
												 int nPortType,
												 int nID,     
												 int nOrgx,        
												 int nMode);
typedef int ( __stdcall * KIOSK_S_PrintBmpInFlash)( HANDLE hPort,
													 int nPortType,
													 int nID,         
													 int nOrgx,       
													 int nMode );
typedef int (__stdcall * KIOSK_S_PrintBarcode)(	 HANDLE hPort,
												 int nPortType,
												 char *pszBuffer,
												 int nOrgx,
												 int nType, 
												 int nWidth,
												 int nHeight,
												 int nHriFontType,
												 int nHriFontPosition,
												 int nBytesOfBuffer );
typedef int (__stdcall * KIOSK_P_SetAreaAndDirection)( HANDLE hPort,
													  int nPortType,
													  int nOrgx,        
													  int nOrgy,        
													  int nWidth,       
													  int nHeight,      
													  int nDirection );
typedef int ( __stdcall * KIOSK_P_Textout)(  HANDLE hPort,
											 int nPortType,  
											 char *pszData,     
											 int nOrgx, 
											 int nOrgy,          
											 int nWidthTimes,     
											 int nHeightTimes,    
											 int nFontType,       
											 int nFontStyle);
typedef int ( __stdcall * KIOSK_P_DownloadPrintBmp)( HANDLE hPort, 
													 int nPortType,
													 char *pszPath, 
													 int nTranslateMode, 
													 int nOrgx,   
													 int nOrgy,     
													 int nMode );
typedef int ( __stdcall * KIOSK_P_PrintBmpInRAM)( HANDLE hPort,
												 int nPortType,
												 int nID,         
												 int nOrgx,  
												 int nOrgy,     
												 int nMode);
typedef int ( __stdcall * KIOSK_P_PrintBmpInFlash)(	 HANDLE hPort,
													 int nPortType,
													 int nID,         
													 int nOrgx,  
													 int nOrgy,     
													 int nMode );
typedef int ( __stdcall * KIOSK_P_PrintBarcode)(HANDLE hPort,
												int nPortType,
												char *pszBuffer,
												int nOrgx,
												int nOrgy, 
												int nType, 
												int nWidth,
												int nHeight,
												int nHriFontType,
												int nHriFontPosition,
												int nBytesOfBuffer);
typedef int ( WINAPI * KIOSK_P_Print)( HANDLE hPort, int nPortType);
typedef int ( __stdcall * KIOSK_P_Clear)( HANDLE hPort, int nPortType);
typedef int ( __stdcall * KIOSK_S_TestPrint)( HANDLE hPort, int nPortType);
typedef int ( __stdcall * KIOSK_CountMode)( HANDLE hPort,
											int nPortType,
											int nBits,
											int nOrder,
											int nSBound,
											int nEBound,
											int nTimeSpace,
											int nCycTime,
											int nCount );
typedef int ( __stdcall * KIOSK_SetPrintFromStart)(	HANDLE hPort,int nPortType,int nMode );
typedef int ( __stdcall * KIOSK_SetRaster )( HANDLE hPort, int nPortType, char *pszBmpPath, int nTranslateMode, int nMode );
typedef int (__stdcall * KIOSK_P_Lineation)( HANDLE hPort,
											int nPortType,
											int nWidth,
											int nSHCoordinate,
											int nSVCoordinate,
											int nEHCoordinate,
											int nEVCoordinate );
typedef int ( __stdcall * KIOSK_RTQueryStatus)( HANDLE hPort, int nPortType, char * pszStatus);
typedef int (__stdcall * KIOSK_RTQueryStatusForT681)(HANDLE hPort, int nPortType, char * pszStatus );